--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <a href="" class="navbar-brand top-heading" style="font-size: 24px; color: rgb(255, 252, 206);"><i class="far fa-user me-2"></i>Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-          <i class="navbar-toggler-icon navbt"></i>
+          <i class="navbar-toggler-icon"></i>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav ms-auto">
